--- a/index.html
+++ b/index.html
@@ -8,58 +8,71 @@
 </head>
 <body>
     <div class="start">
+        <br> <br>
         <h1>
             The name of the article here
         </h1>
-        <p class="released-when">11 hours ago</p>
+        <p class="released-when">Released in 4th of January, 2111. 11 hours ago</p>
         <br>
         <p class="created-by"><b>Tommy Tommy</b></p>
         <p class="super-small-text">BCC Newsbeat</p>
         <img src="images/image-1.jpg" width="600" height="300"></img>
         <p class="super-small-text">Image by Mickey Mouse. All rights reserved</p>
+        <br>
         <p class="bread-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
             Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
-        </p>
+        </p> <br>
         <p class="bread-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
             Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
-        </p>
+        </p> <br>
+        <br>
+        <ol>
+            <li> ipsum dolor sit amet consectetur adipisicing elit. </li>
+            <li> Nemo ad voluptatem qui est delectus reiciendis nihil hic voluptates.</li> 
+            <li> NNecessitatibus aliquid nemo repellat aspernatur magnam sit praesentium delectus libero deserunt voluptates?</li>
+            
+        </ol>
+        <br>
         <br>
     </div>
 </body>
 <body>
     <div class="wrapper">
-        <h2>New segment of the article</h2> 
+        <h2>New segment of the article</h2>
         <br>
         <img src="images/image-2.jpg" width="400" height="200"></img>
         <p class="super-small-text">Image by Minnie Mouse. All rights reserved</p>
+        <br>
+        <p class="bread-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
+            Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
+        </p> <br>
+        <p class="bread-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
+            Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
+        </p> <br>
         <p class="bread-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
             Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
         </p>
-        <p class="bread-text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-            Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
-            Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
-        </p>
-        <p class="bread-text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-            Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
-            Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
-        </p>
+        <br>
         <br>
     </div>
 </body>
 <body>
     <div class="end">
-        <h2>Closing segments of the article</h2> 
+        <h2>Closing segments of the article</h2>
         <br>
         <img src="images/image-3-but-png.png" width="400" height="200"></img>
         <p class="super-small-text">Image by Walter Diseney. All rights reserved</p>
+        <br>
         <p class="bread-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
@@ -69,7 +82,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
             Rerum commodi nostrum ex nam accusantium ab excepturi inventore recusandae voluptatibus?<br>
-        </p>
+        </p> <br>
         <p class="bread-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
             Molestiae assumenda illum vel reiciendis minus fugiat cumque officia hic sunt. <br>
