--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The name of the article here - BCC Newsbeat</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/ta.png" type="image/png">
 </head>
 <body>
     <div class="start">
